cluster/app/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bedrock
  namespace: bedrock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrock
  template:
    metadata:
      labels:
        app: bedrock
    spec:
      containers:
      - name: bedrock
        image: localhost:5000/vm-bedrock:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: bedrock-storage
          mountPath: /var/www/web/sites
      volumes:
      - name: bedrock-storage
        persistentVolumeClaim:
          claimName: bedrock-storage
