cluster/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bedrock-service
  namespace: bedrock
spec:
  selector:
    app: bedrock
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
