cluster/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bedrock-ingress
  namespace: bedrock
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 50m  # Permite uploads grandes no WordPress
spec:
  ingressClassName: nginx
  rules:
  - host: bedrock.net.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bedrock-service
            port:
              number: 80
